--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   connectivity_plus: ^4.0.0 # o la versión más reciente
   audioplayers: ^6.1.0
   shared_preferences: ^2.3.3
+  share_plus: ^10.1.2
+  http: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
