--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  connectivity_plus: ^4.0.0 # o la versión más reciente
+  connectivity_plus: ^4.0.0
   audioplayers: ^6.1.0
   shared_preferences: ^2.3.3
   share_plus: ^10.1.2
   http: ^1.2.2
+  path_provider: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -97,6 +98,7 @@ flutter:
   assets:
     - assets/fonts/LEMONMILK-RegularItalic.otf
     - assets/icons/
+    - assets/backgrounds/
 
   fonts:
     - family: DiaryOfAn8BitMage
